--- a/lib/css/zenburn.css
+++ b/lib/css/zenburn.css
@@ -113,3 +113,9 @@ based on dark.css by Ivan Sagalaev
 .xml .hljs-cdata {
   opacity: 0.5;
 }
+
+pre.cscode {margin:0em; overflow:auto; background-color:#ffffff;}
+.cscode code {font-family:Consolas,"Courier New",Courier,Monospace; font-size:10pt; color:#000000;}
+.cscode .key {color:#0000ff;}
+.cscode .com {color:#008000;}
+.cscode .str {color:#a31515;}
